[project]
name = "ckanext-dcat"
version = "2.0.0"
description = "Plugins for exposing and consuming DCAT metadata on CKAN"
authors = [
    {name = "CKAN Tech Team and contributors", email = "tech-team@ckan.org"}
]
license = {text = "AGPL"}
classifiers = []
keywords = []
dependencies = []

[project.urls]
Homepage = "http://github.com/ckan/ckanext-dcat"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

#[build-system]
#requires = ["setuptools", "wheel"]
#build-backend = "setuptools.build_meta"
#
[tool.setuptools]
#packages = ["ckanext"]
#namespace-packages = ["ckanext"]
include-package-data = true

[tool.setuptools.packages]
find = {}


[project.entry-points."ckan.plugins"]
dcat_xml_harvester = "ckanext.dcat.harvesters:DCATXMLHarvester"
dcat_json_harvester = "ckanext.dcat.harvesters:DCATJSONHarvester"
dcat_rdf_harvester = "ckanext.dcat.harvesters:DCATRDFHarvester"
dcat_json_interface = "ckanext.dcat.plugins:DCATJSONInterface"
dcat = "ckanext.dcat.plugins:DCATPlugin"
structured_data = "ckanext.dcat.plugins:StructuredDataPlugin"
# Test plugins
test_rdf_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFHarvester"
test_rdf_null_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFNullHarvester"
test_rdf_exception_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFExceptionHarvester"

[project.entry-points."ckan.rdf.profiles"]
euro_dcat_ap = "ckanext.dcat.profiles:EuropeanDCATAPProfile"
euro_dcat_ap_2 = "ckanext.dcat.profiles:EuropeanDCATAP2Profile"
euro_dcat_ap_3 = "ckanext.dcat.profiles:EuropeanDCATAP3Profile"
euro_dcat_ap_scheming = "ckanext.dcat.profiles:EuropeanDCATAPSchemingProfile"
schemaorg = "ckanext.dcat.profiles:SchemaOrgProfile"
