[project]
name = "ckanext-dcat"
version = "2.4.0"
dynamic = ["dependencies", "optional-dependencies"]
description = "Plugins for exposing and consuming DCAT metadata on CKAN"
authors = [
    {name = "Adrià Mercader", email = "amercadero@gmail.com"}
]
maintainers = [
    {name = "CKAN Tech Team and contributors", email = "tech-team@ckan.org"},
    {name = "Seitenbau Govdata"},
    {name = "Stefan Oderbolz"}
]
license = {text = "AGPL"}
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
keywords = [
    "ckan",
    "ckanext",
    "DCAT",
    "DCAT-AP",
    "Schema.org",
    "Croissant ML",
    "Linked data",
    "RDF",
    "Semantic data"
]

[project.urls]
Documentation = "https://docs.ckan.org/projects/ckanext-dcat"
Repository = "https://github.com/ckan/ckanext-dcat"
Issues = "https://github.com/ckan/ckanext-dcat/issues"
Changelog = "https://docs.ckan.org/projects/ckanext-dcat/en/latest/changelog/"

[build-system]
requires = ["setuptools>=62.6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["dev-requirements.txt"] }}

[project.entry-points."ckan.plugins"]
dcat_xml_harvester = "ckanext.dcat.harvesters:DCATXMLHarvester"
dcat_json_harvester = "ckanext.dcat.harvesters:DCATJSONHarvester"
dcat_rdf_harvester = "ckanext.dcat.harvesters:DCATRDFHarvester"
dcat_json_interface = "ckanext.dcat.plugins:DCATJSONInterface"
dcat = "ckanext.dcat.plugins:DCATPlugin"

structured_data = "ckanext.dcat.plugins:StructuredDataPlugin"
croissant = "ckanext.dcat.plugins:CroissantPlugin"
# Test plugins
test_rdf_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFHarvester"
test_rdf_null_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFNullHarvester"
test_rdf_exception_harvester = "ckanext.dcat.tests.harvester.test_harvester:TestRDFExceptionHarvester"

[project.entry-points."ckan.rdf.profiles"]
euro_dcat_ap = "ckanext.dcat.profiles:EuropeanDCATAPProfile"
euro_dcat_ap_2 = "ckanext.dcat.profiles:EuropeanDCATAP2Profile"
euro_dcat_ap_3 = "ckanext.dcat.profiles:EuropeanDCATAP3Profile"
euro_dcat_ap_scheming = "ckanext.dcat.profiles:EuropeanDCATAPSchemingProfile"
euro_health_dcat_ap = "ckanext.dcat.profiles:EuropeanHealthDCATAPProfile"
dcat_us_3 = "ckanext.dcat.profiles:DCATUS3Profile"
schemaorg = "ckanext.dcat.profiles:SchemaOrgProfile"
croissant = "ckanext.dcat.profiles:CroissantProfile"
